# PicoScan

./: CMakeLists.txt  LICENSE  README.md  accept.sh  edit.sh  fix.h  gen-build.sh  log.h  main_termux.cpp  render.cpp  render.h  sbuffer.cpp  sbuffer.h  test_fix.cpp  test_raster.cpp
test_resources/: FrameBufferTest_xor1bpp.txt  RenderTest_bottomClip.txt  RenderTest_bottomClip2.txt  RenderTest_clip3side.txt  RenderTest_fillConvention.txt  RenderTest_left.txt  RenderTest_leftClip.txt  RenderTest_leftClip2.txt  RenderTest_right.txt  RenderTest_rightClip.txt  RenderTest_rightClip2.txt  RenderTest_topClip.txt  RenderTest_topClip2.txt
